# aleo-wallet

./: .gitignore  Cargo.toml  README.md
sandbox/: Cargo.toml
sandbox/src/: main.rs
wasm/: Cargo.toml
wasm/src/account/: account.rs
website/: craco.config.js  dist.crx  dist.pem  manifest.json  package.json
website/src/: AccountFromPrivateKey.js  App.css  App.js  DecryptRecord.js  NewAccount.js  bundle.css  index.js
